--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"passport-google-oauth20": "^2.0.0",
 		"streamifier": "^0.1.1",
 		"swagger-ui-express": "^5.0.1",
+		"uuid": "^11.1.0",
 		"yaml": "^2.8.0"
 	}
 }
